RESOLVED FIXED186896
Do some CoW cleanup
https://bugs.webkit.org/show_bug.cgi?id=186896
Summary Do some CoW cleanup
Saam Barati
Reported 2018-06-21 14:24:08 PDT
...
Attachments
patch (3.56 KB, patch)
2018-06-21 14:53 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2018-06-21 14:53:06 PDT
Mark Lam
Comment 2 2018-06-21 14:57:22 PDT
Comment on attachment 343278 [details] patch r=me
Keith Miller
Comment 3 2018-06-21 14:57:53 PDT
Comment on attachment 343278 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=343278&action=review > Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:-4598 > - // TODO: Do I need this? Whoops, that's definitely my bad! lol
WebKit Commit Bot
Comment 4 2018-06-21 15:57:16 PDT
Comment on attachment 343278 [details] patch Clearing flags on attachment: 343278 Committed r233065: <https://trac.webkit.org/changeset/233065>
WebKit Commit Bot
Comment 5 2018-06-21 15:57:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-21 15:58:19 PDT
Carlos Alberto Lopez Perez
Comment 7 2018-06-22 04:59:43 PDT
(In reply to WebKit Commit Bot from comment #4) > Comment on attachment 343278 [details] > patch > > Clearing flags on attachment: 343278 > > Committed r233065: <https://trac.webkit.org/changeset/233065> This broke our Ubuntu bot (clang-3.8 with libstcd++-5.4) ./../Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.h:312:16: error: chosen constructor is explicit in copy-initialization return { profile, recommendedIndexingType }; ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/tuple:612:19: note: constructor declared here constexpr tuple(_U1&& __a1, _U2&& __a2) ^ 1 error generated. Log: https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20Ubuntu%20LTS%20%28Build%29/builds/13359/steps/compile-webkit/logs/stdio
Keith Miller
Comment 8 2018-06-22 08:45:22 PDT
(In reply to Carlos Alberto Lopez Perez from comment #7) > (In reply to WebKit Commit Bot from comment #4) > > Comment on attachment 343278 [details] > > patch > > > > Clearing flags on attachment: 343278 > > > > Committed r233065: <https://trac.webkit.org/changeset/233065> > > This broke our Ubuntu bot (clang-3.8 with libstcd++-5.4) > > > ./../Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.h:312:16: error: > chosen constructor is explicit in copy-initialization > return { profile, recommendedIndexingType }; > ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ > /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/ > tuple:612:19: note: constructor declared here > constexpr tuple(_U1&& __a1, _U2&& __a2) > ^ > 1 error generated. > > > Log: > https://build.webkit.org/builders/GTK%20Linux%2064- > bit%20Release%20Ubuntu%20LTS%20%28Build%29/builds/13359/steps/compile-webkit/ > logs/stdio There probably just needs to be a WTFMove around profile and recommendedIndexingType.
Carlos Alberto Lopez Perez
Comment 9 2018-06-26 10:30:03 PDT
(In reply to Keith Miller from comment #8) > (In reply to Carlos Alberto Lopez Perez from comment #7) > > (In reply to WebKit Commit Bot from comment #4) > > > Comment on attachment 343278 [details] > > > patch > > > > > > Clearing flags on attachment: 343278 > > > > > > Committed r233065: <https://trac.webkit.org/changeset/233065> > > > > This broke our Ubuntu bot (clang-3.8 with libstcd++-5.4) > > > > > > ./../Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.h:312:16: error: > > chosen constructor is explicit in copy-initialization > > return { profile, recommendedIndexingType }; > > ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ > > /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/ > > tuple:612:19: note: constructor declared here > > constexpr tuple(_U1&& __a1, _U2&& __a2) > > ^ > > 1 error generated. > > > > > > Log: > > https://build.webkit.org/builders/GTK%20Linux%2064- > > bit%20Release%20Ubuntu%20LTS%20%28Build%29/builds/13359/steps/compile-webkit/ > > logs/stdio > > There probably just needs to be a WTFMove around profile and > recommendedIndexingType. That didn't worked.. I was only able to fix the build error by reverting changes of r233065 over UnlinkedCodeBlock.h I have submitted a patch for fixing this at bug 187051 .. if you can review it that will be great.
Note You need to log in before you can comment on or make changes to this bug.