Do some CoW cleanup https://bugs.webkit.org/show_bug.cgi?id=186896

Reviewed by Mark Lam.

* bytecode/UnlinkedCodeBlock.h:
(JSC::UnlinkedCodeBlock::decompressArrayAllocationProfile):
We don't need to WTFMove() ints

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
remove a TODO.

* runtime/JSObject.cpp:
(JSC::JSObject::putByIndex):
We were checking for isCopyOnWrite even after we converted away
from CoW in above code.
(JSC::JSObject::ensureWritableInt32Slow):
Model this in the same way the other ensureWritableXSlow are modeled.


Canonical link: https://commits.webkit.org/202160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233065 268f45cc-cd09-0410-ab3c-d52691b4dbfc